fixed alignment of 'Eco news'

--- a/src/app/component/eco-news/components/news-list/news-list.component.scss
+++ b/src/app/component/eco-news/components/news-list/news-list.component.scss
@@ -88,7 +88,15 @@ a {
   }
 }
 
+@media screen and (max-width: 1024px) {
+  .wrapper {
+    margin: 0 2.42%;
+  }
+}
+
 @media screen and (max-width: 991px) {
+
+
   .gallery-view-active {
     grid-template-columns: repeat(2, 353px);
     grid-gap: 15px;
@@ -100,9 +108,9 @@ a {
 }
 
 @media screen and (max-width: 767px) {
-  .wrapper {
-    margin: 0 1.95%;
-  }
+  // .wrapper {
+  //   margin: 0 1.95%;
+  // }
 
   .gallery-view-active {
     grid-template-columns: repeat(2, 258px);
@@ -111,9 +119,9 @@ a {
 }
 
 @media screen and (max-width: 575px) {
-  .wrapper {
-    margin: 0 2.4%;
-  }
+  // .wrapper {
+  //   margin: 0 2.4%;
+  // }
 
   .gallery-view-active {
     grid-template-columns: repeat(1, 288px);
